fixed navbar, sticky footer, changed column size collapse and working on logos

--- a/snapcard.css
+++ b/snapcard.css
@@ -3,7 +3,6 @@ body {
 }
 
 h1 {
-	text-align: center;
 	font-size: 50px;
 }
 
@@ -32,11 +31,6 @@ li {
 	
 }
 
-#footer li {
-	display: inline-block;
-	padding: 10px 15px;
-}
-
 
 #accordion {
 	font-size: 10px;
@@ -44,7 +38,4 @@ li {
 	bottom: 100;
 	width: 100%;
 	height: 60px;
-}
-div:hover {
-	background-color: #A2E1F5;
 }
